--- a/frontend/src/Components/Users/MapContainer.css
+++ b/frontend/src/Components/Users/MapContainer.css
@@ -14,7 +14,7 @@
     color: black;
     font-weight: bold;
     cursor: pointer;
-    background-color: beige;
+    /* background-color: beige; */
 }
 
 .calculate{
